@@ -18,18 +18,16 @@ class SyncThread implements Runnable {
 				long now = System.currentTimeMillis();
 				long then = nextSync.getTimeInMillis();
 				while (then < now + 60000) then += 1000 * 60 * 60 * 24;
-				ServerUtils.log("Next GitHub sync scheduled for " + new Date(then) +
-				                   " (" + Utils.durationString(then - now) +
-				                   " remaining).");
+				ServerUtils.log("Next GitHub sync scheduled for " + new Date(then) + " (" +
+				                Utils.durationString(then - now) + " remaining).");
 				Thread.sleep(then - now);
 				ServerUtils.log("Waking up for GitHub sync at " + new Date());
 				synchronized (ServerUtils.SYNCER) {
 					ServerUtils.log("Cleaning up inactive threads at " + new Date());
 					ServerUtils.SYNCER.check();
 					if (errored)
-						throw new Exception(
-						    "You still have not resolved the merge conflicts. "
-						    + "Please do so soon!");
+						throw new Exception("You still have not resolved the merge conflicts. "
+						                    + "Please do so soon!");
 					ServerUtils.log("Performing GitHub sync at " + new Date());
 					Utils._staticprofiles.clear();
 					ServerUtils.SYNCER.sync();
@@ -43,15 +41,14 @@ class SyncThread implements Runnable {
 					             + "The automated GitHub sync on the server "
 					             + "has failed with the following error message:\n"
 					             + "```\n" + e + "\n```\n\n```\n$ git status";
-					Process p = Runtime.getRuntime().exec(
-					    new String[] {"bash", "-c", "git status"});
+					Process p =
+					    Runtime.getRuntime().exec(new String[] {"bash", "-c", "git status"});
 					p.waitFor();
 					BufferedReader b =
 					    new BufferedReader(new InputStreamReader(p.getInputStream()));
 					while ((str = b.readLine()) != null) msg += "\n" + str;
 					msg += "\n```\n\nThe automated syncs will discontinue until the server "
-					       +
-					       "has been restarted. Please resolve the merge conflicts quickly."
+					       + "has been restarted. Please resolve the merge conflicts quickly."
 					       + "  \nThank you :)";
 
 					Utils.bash("bash", "-c", "git status");
